# OpenGraphRAG

./: README.md  pyproject.toml
opengraphrag/: graph_rag_small_llms.ipynb  graph_rag_small_llms_wo_baml.ipynb
opengraphrag/baml_client/: async_client.py  inlinedbaml.py  sync_client.py  type_builder.py  types.py
opengraphrag/baml_src/: clients.baml  generators.baml
