[tool.poetry]
name = "opengraphrag"
version = "0.1.0"
description = "Graph-based Retrieval-Augmented Generation (RAG) with open-source LLMs, Neo4j, and embeddings for dynamic, relationship-driven retrieval."
authors = ["Arindam Khaled"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
sentence-transformers = "^3.2.0"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
langchain-core = "^0.3.13"
langchain-openai = "^0.2.4"
baml-py = "^0.64.0"
ipykernel = "^6.29.5"
ollama = "^0.3.3"
langchain-experimental = "^0.3.3"
pandas = "^2.2.3"
langchain-ollama = "^0.2.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
neo4j = "^5.26.0"
graphdatascience = "^1.12"

[tool.poetry.group.dev.dependencies]
vllm = "0.6.1.post2"
tqdm = "^4.66.6"
black = "^24.10.0"
isort = "^5.13.2"
nbqa = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

